--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,8 @@
 :root {
     --greenish: #00473e;
     --text: #475d5b;
+    --card: #fffffe;
+    --yellow: #faae2b;
 }
 
 *,
@@ -62,6 +64,14 @@ a {
     background: rgb(0, 0, 0, 0.9);
 }
 
+.carousel-caption a {
+    background: #faae2c;
+    color: #00473e;
+    padding: 10px;
+    font-weight: bold;
+    border-radius: 10px;
+}
+
 @media only screen and (min-width: 1200px) {
     .carousel-caption {
         position: absolute;
@@ -70,6 +80,10 @@ a {
         flex-direction: column;
         align-items: center;
         justify-content: center;
+    }
+
+    .carousel-caption a {
+        padding: 15px 30px;
     }
 
     .carousel-caption h3 {
@@ -83,20 +97,4 @@ a {
         background: rgb(0, 0, 0, 0.9);
         display: inline;
     }
-}
-
-.team {
-    padding: 20px 0;
-}
-
-.team-wrap {
-    margin: auto;
-    width: 90%;
-    display: grid;
-    grid-template-columns: 1fr;
-}
-
-.team-wrap img {
-    height: auto;
-    width: 100%;
 }
