--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Scope+One&display=swap');
 
 :root {
     --greenish: #00473e;
@@ -57,11 +58,13 @@ a {
 .carousel-caption h3 {
     font-size: 1.2rem;
     background: rgb(0, 0, 0, 0.9);
+    font-family: 'Scope One', serif;
 }
 
 .carousel-caption p {
     font-size: 0.9rem;
     background: rgb(0, 0, 0, 0.9);
+    font-family: 'Scope One', serif;
 }
 
 .carousel-caption a {
@@ -91,10 +94,12 @@ a {
         font-weight: bold;
         background: rgb(0, 0, 0, 0.9);
         display: inline;
+        padding: 0 5px;
     }
 
     .carousel-caption p {
         background: rgb(0, 0, 0, 0.9);
         display: inline;
+        padding: 0 5px;
     }
 }
